--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
  <head>
   <title>Pokemon Website - Phase1</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link rel="stylesheet" href="./main.css">
  </head>
  <body>
