--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <h1 class="header">Pokemon</h1>
   <div id="container"></div>
   <button id="new-pokemon-btn">New Pokemon</button>
+  <button id="remove-pokemon-btn">Remove Pokemon</button>
   <div id="roster">
    <div id="pokemon-1"></div>
    <div id="pokemon-2"></div>
